2008-08-23  Vadim Kurland  <vadim@vk.crocodile.org>

	* FWObject.cpp (FWObject::toXML): (change in libfwbuilder) moved
	saving of XML attributes name and comment from FWObject::toXML()
	to implementations of this virtual method in all classes that are
	supposed to have name and comment. When user created an object
	with empty name, the old code used to save such object into XML
	file w/o attribute "name" which violated DTD. This is fixed now.

2008-08-22  Vadim Kurland  <vadim@vk.crocodile.org>

	* RuleSetView.cpp (RuleSetView::keyPressEvent): fixed bug (no #):
	while navigating between rule elements using keyboard, it was not
	possible to reach the very last rule if ruleset contained rule
	groups
	
	* RuleSetView.cpp (RuleSetView::paintCell): do not draw green
	frame around rule group; draw black bracket line in the column #0
	longer, almost to the bottom of the last rule row. Draw rule group
	head row grey to make it visually stand out.

	* ipt.cpp (main): additional fix for the bug #2051629 "group with
	dns names are handled as empty": Compiler should check if any
	rules of given address family exists before running
	preprocessor. This is to prevent it from trying to resolve DNSName
	objects for IPv6 when there are no ipv6 rules.

2008-08-21  Vadim Kurland  <vadim@vk.crocodile.org>

	* ProjectPanel_file_ops.cpp (ProjectPanel::load): truncating very
	long error messages that happen when GUI tries to load broken .fwb
	file. These error messages contain complete output of the XML
	parser which can be very long and does not fit in the normal error
	dialog. Message will be cut off at 1000 characters, which is
	enough to see the topmost part of the parser output.

2008-08-20  vadim  <vadim@vk.crocodile.org>

	* ObjectTreeView.cpp (ObjectTreeView::ObjectTreeView): Fixed GUI
	crash on Ubuntu Hardy that happened b/c of a bug in QT
	4.3.4. Crash happened when user added second object to any branch
	of the tree. When second object was added to the tree, the program